modules/gdscript/tests/scripts/parser/errors/lambda_standalone.gd
func test():
	func standalone():
		print("can't be accessed")
